--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "repository": "git@github.com:francesco-strazzullo/a-frame-examples.git",
   "author": "Francesco Strazzullo <francesco.strazzullo86@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "dependencies": {
     "aframe": "^0.5.0"
   },
   "devDependencies": {
-    "http-server": "^0.10.0"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.5.1",
+    "http-server": "^0.10.0",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
