--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "Francesco Strazzullo <francesco.strazzullo86@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "node publish"
   },
   "dependencies": {
     "aframe": "^0.5.0"
@@ -16,6 +19,8 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.1",
+    "gh-pages": "^1.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5"
