--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.1",
+    "copy-webpack-plugin": "^4.0.1",
     "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
